WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75741
[cg] userSpaceOnUse SVG Patterns have the wrong origin
https://bugs.webkit.org/show_bug.cgi?id=75741
Summary
[cg] userSpaceOnUse SVG Patterns have the wrong origin
Tim Horton
Reported
2012-01-06 14:05:44 PST
Created
attachment 121491
[details]
repro Patterns use the wrong transformation to user space, leading to the origin being in the bottom left instead of top left. Note that the patterns in the attached test case are a) upside-down and b) move when you resize the window. See expected behavior in Firefox or Opera. I have a patch. <
rdar://problem/9383222
>
Attachments
repro
(5.14 KB, application/xhtml+xml)
2012-01-06 14:05 PST
,
Tim Horton
no flags
Details
patch
(11.94 KB, patch)
2012-01-06 14:14 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
patch with image result
(25.57 KB, patch)
2012-01-06 14:41 PST
,
Tim Horton
simon.fraser
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2012-01-06 14:14:28 PST
Created
attachment 121494
[details]
patch
Simon Fraser (smfr)
Comment 2
2012-01-06 14:17:41 PST
Comment on
attachment 121494
[details]
patch Are applyStrokePattern() and applyFillPattern() used by canvas and CSS rendering? How does this affect those?
Tim Horton
Comment 3
2012-01-06 14:25:53 PST
(In reply to
comment #2
)
> (From update of
attachment 121494
[details]
) > Are applyStrokePattern() and applyFillPattern() used by canvas and CSS rendering? How does this affect those?
Just Canvas and SVG, as far as I can tell. What in CSS would use them? In terms of Canvas, all the tests pass, and I manually tried out some of hixie's pattern examples and they all seem to pass too.
Tim Horton
Comment 4
2012-01-06 14:41:30 PST
Created
attachment 121500
[details]
patch with image result
WebKit Review Bot
Comment 5
2012-01-06 16:17:38 PST
Comment on
attachment 121500
[details]
patch with image result
Attachment 121500
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/11173147
New failing tests: svg/custom/pattern-userSpaceOnUse-userToBaseTransform.xhtml
Tim Horton
Comment 6
2012-01-06 16:30:08 PST
Landed in
http://trac.webkit.org/changeset/104356
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug